--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,300&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/assets/style/style.css">
+  <link rel="stylesheet" href="assets/style/style.css">
   <title>Document</title>
 
 </head>
@@ -32,7 +32,7 @@
             <span class="p-a"></span>
           </div>
           <div class="header__logo d-f ai-c  jc-c">
-            <img src="/assets/img/logo.svg" alt="logotype">
+            <img src="assets/img/logo.svg" alt="logotype">
           </div>
           <div class="header__actions d-f ai-c ">
             <div class="header__request btn btn-blue">
@@ -54,7 +54,7 @@
           <div class="l-intro__items d-g">
             <div
               class="l-intro__item p-r"
-              style="background-image: url(/assets/img/1.jpg);"
+              style="background-image: url(assets/img/1.jpg);"
             >
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
@@ -80,7 +80,7 @@
             </div>
             <div
               class="l-intro__item p-r"
-              style="background-image: url(/assets/img/2.jpg);"
+              style="background-image: url(assets/img/2.jpg);"
             >
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
@@ -105,7 +105,7 @@
             </div>
             <div
               class="l-intro__item p-r"
-              style="background-image: url(/assets/img/3.jpg);"
+              style="background-image: url(assets/img/3.jpg);"
             >
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
@@ -275,7 +275,7 @@
       <div class="footer__top d-f jc-sb ai-c">
         <div class="footer__logo d-f ai-c">
           <div class="footer__picture">
-          <img src="/assets/img/logo-2.svg" alt="logo">
+          <img src="assets/img/logo-2.svg" alt="logo">
           </div>
           <span>Группа компаний ALP</span>
         </div>
