add some hover effects

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="header__request btn btn-blue">
               Связаться
             </div>
-            <div class="header__lang">EN</div>
+            <div class="header__lang txt-hover">EN</div>
           </div>
         </div>
       </div>
@@ -282,10 +282,10 @@
         <div class="footer__box">
           <div class="footer__contacts d-f jc-sb">
             <div class="footer__phone">
-              <a href="tel:88005555151">8 800 555-51-51</a>
+              <a href="tel:88005555151" class="txt-hover" >8 800 555-51-51</a>
             </div>
             <div class="footer__mail">
-              <a href="mailto:info@alp.ru">info@alp.ru</a>
+              <a href="mailto:info@alp.ru" class="txt-hover">info@alp.ru</a>
             </div>
           </div>
         </div>
@@ -293,9 +293,9 @@
       <div class="footer__bottom d-f jc-sb">
         <div class="footer__links">
           <ul>
-            <li><a href="#">Цифровизация бизнеса и импортозамещение</a></li>
-            <li><a href="#">IT-аутсорсинг</a></li>
-            <li><a href="#">Мультиканальный маркетинг</a></li>
+            <li><a class="txt-hover" href="#">Цифровизация бизнеса и импортозамещение</a></li>
+            <li><a class="txt-hover" href="#">IT-аутсорсинг</a></li>
+            <li><a class="txt-hover" href="#">Мультиканальный маркетинг</a></li>
           </ul>
         </div>
         <div class="footer__box">
