--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 <div class="wrapper">
   <div
     class="content"
-    style="background-image: url(assets/img/bg.png);"
   >
+<!--    style="background-image: url(assets/img/bg.png);"-->
+    <div class="content__video">
+      <video src="assets/video/intro.mp4" muted autoplay loop></video>
+    </div>
     <header class="header">
       <div class="container">
         <div class="header__row d-g">
@@ -54,8 +57,8 @@
           <div class="l-intro__items d-g">
             <div
               class="l-intro__item p-r"
-              style="background-image: url(assets/img/1.jpg);"
             >
+<!--              style="background-image: url(assets/img/1.jpg);"-->
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
                   <div class="l-intro__name">
@@ -77,11 +80,14 @@
                         rx="15" ry="15"/>
                 </svg>
               </div>
+              <div class="l-intro__back p-a">
+                <img src="assets/img/1.jpg" alt="alt">
+              </div>
             </div>
             <div
               class="l-intro__item p-r"
-              style="background-image: url(assets/img/2.jpg);"
             >
+<!--              style="background-image: url(assets/img/2.jpg);"-->
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
                   <div class="l-intro__name">
@@ -102,11 +108,14 @@
                         rx="15" ry="15"/>
                 </svg>
               </div>
+              <div class="l-intro__back p-a">
+                <img src="assets/img/2.jpg" alt="alt">
+              </div>
             </div>
             <div
               class="l-intro__item p-r"
-              style="background-image: url(assets/img/3.jpg);"
             >
+<!--              style="background-image: url(assets/img/3.jpg);"-->
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
                   <div class="l-intro__name">
@@ -126,6 +135,9 @@
                         width="100" height="100"
                         rx="15" ry="15"/>
                 </svg>
+              </div>
+              <div class="l-intro__back p-a">
+                <img src="assets/img/3.jpg" alt="alt">
               </div>
             </div>
           </div>
@@ -147,7 +159,7 @@
                   <div class="l-experience__name">
                     Дмитрий Бессольцев
                   </div>
-                  <div class="l-experience__position">
+                  <div class="l-experience__position txt-hover">
                     Директор департамента ИТ-аутсорсинга ALP Group
                   </div>
                 </div>
@@ -156,7 +168,24 @@
             <div class="l-experience__stats">
               <div class="l-experience__item d-f ai-c">
                 <div class="l-experience__icon">
-                  <embed width="24" height="24" type="image/svg+xml" src="assets/img/icons/cup.svg">
+<!--                  <embed -->
+<!--                    width="24" -->
+<!--                    height="24" -->
+<!--                    type="image/svg+xml" src="assets/img/icons/cup.svg">-->
+                  <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g class="svg-shadow" filter="url(#filter0_f_103_8)">
+                      <path d="M18.0909 18.997C24.6619 18.9642 27 15.4842 27 12.5002C27 10.823 25.8131 9.42 24.2358 9.08109C24.3717 8.69391 24.4898 8.33906 24.57 8.07C24.923 6.87703 24.6942 5.61609 23.9428 4.61109C23.1769 3.58781 22.0059 3 20.7291 3H9.27094C7.99406 3 6.82172 3.58781 6.05578 4.61203C5.30484 5.61703 5.07656 6.87797 5.43 8.07C5.51016 8.33906 5.62688 8.69391 5.76422 9.08109C4.18687 9.42 3 10.823 3 12.5002C3 15.4842 5.33906 18.9642 11.9091 18.997C11.9648 19.2989 12 19.6069 12 19.92V23.0002C12 24.8259 10.4639 24.9923 9.99984 25.0003H9C8.44687 25.0003 8.00016 25.4475 8.00016 26.0002C8.00016 26.5528 8.44734 27 9 27H21C21.5531 27 21.9998 26.5528 21.9998 26.0002C21.9998 25.4475 21.5527 25.0003 21 25.0003H20.0081C19.5361 24.9923 18 24.8264 18 23.0002V19.92C18 19.6069 18.0352 19.2989 18.0909 18.997ZM23.4998 11.0002C24.3267 11.0002 24.9998 11.6733 24.9998 12.5002C24.9998 14.5341 23.3906 16.6973 18.9637 16.9702C19.1845 16.6711 19.4377 16.3941 19.7259 16.1494C21.465 14.6714 22.6589 12.6966 23.453 10.9903C23.4698 10.9903 23.4839 11.0002 23.5008 11.0002H23.4998ZM5.00016 12.5002C5.00016 11.6733 5.67328 11.0002 6.50016 11.0002C6.51703 11.0002 6.53109 10.9913 6.54703 10.9903C7.34109 12.6961 8.53406 14.6705 10.2741 16.1494C10.5619 16.3945 10.815 16.6702 11.0363 16.9702C6.60938 16.6973 5.00016 14.5341 5.00016 12.5002ZM13.5131 25.0003C13.808 24.4594 14.0002 23.8064 14.0002 23.0002V19.92C14.0002 17.8692 13.1142 15.9398 11.5692 14.6259C9.80016 13.1217 8.22234 10.4588 7.34813 7.50375C7.17609 6.92063 7.28812 6.30375 7.65891 5.80969C8.04281 5.29453 8.63109 4.99969 9.27094 4.99969H20.7281C21.368 4.99969 21.9562 5.29453 22.3402 5.80875C22.7091 6.30375 22.822 6.92062 22.6509 7.50281C21.7758 10.4597 20.198 13.1217 18.4298 14.6259C16.8848 15.9389 15.9989 17.8687 15.9989 19.92V23.0002C15.9989 23.8059 16.1897 24.4594 16.4859 25.0003H13.5131ZM12.7913 12.7631C12.5273 12.5812 12.4162 12.2452 12.5212 11.9409L13.0402 10.335L11.6742 9.33516C11.347 9.09516 11.2762 8.63625 11.5162 8.30906C11.6541 8.12109 11.8744 8.00906 12.1073 8.00906H13.7883L14.2992 6.41625C14.4281 6.02906 14.8463 5.82141 15.2334 5.95031C15.4533 6.02344 15.6263 6.19641 15.6994 6.41625L16.2094 8.00906H17.8903C18.2953 8.00906 18.6244 8.33719 18.6244 8.74312C18.6244 8.97797 18.5123 9.19828 18.3234 9.33609L16.9575 10.3359L17.4764 11.9419C17.6006 12.3277 17.3883 12.742 17.0016 12.8667C16.7775 12.9389 16.5323 12.8986 16.3425 12.7598L14.9995 11.7717L13.6556 12.7589C13.3997 12.9497 13.0495 12.9511 12.7917 12.7631H12.7913Z" fill="#2067FB"/>
+                    </g>
+                    <path d="M18.0909 18.997C24.6619 18.9642 27 15.4842 27 12.5002C27 10.823 25.8131 9.42 24.2358 9.08109C24.3717 8.69391 24.4898 8.33906 24.57 8.07C24.923 6.87703 24.6942 5.61609 23.9428 4.61109C23.1769 3.58781 22.0059 3 20.7291 3H9.27094C7.99406 3 6.82172 3.58781 6.05578 4.61203C5.30484 5.61703 5.07656 6.87797 5.43 8.07C5.51016 8.33906 5.62688 8.69391 5.76422 9.08109C4.18687 9.42 3 10.823 3 12.5002C3 15.4842 5.33906 18.9642 11.9091 18.997C11.9648 19.2989 12 19.6069 12 19.92V23.0002C12 24.8259 10.4639 24.9923 9.99984 25.0003H9C8.44687 25.0003 8.00016 25.4475 8.00016 26.0002C8.00016 26.5528 8.44734 27 9 27H21C21.5531 27 21.9998 26.5528 21.9998 26.0002C21.9998 25.4475 21.5527 25.0003 21 25.0003H20.0081C19.5361 24.9923 18 24.8264 18 23.0002V19.92C18 19.6069 18.0352 19.2989 18.0909 18.997ZM23.4998 11.0002C24.3267 11.0002 24.9998 11.6733 24.9998 12.5002C24.9998 14.5341 23.3906 16.6973 18.9637 16.9702C19.1845 16.6711 19.4377 16.3941 19.7259 16.1494C21.465 14.6714 22.6589 12.6966 23.453 10.9903C23.4698 10.9903 23.4839 11.0002 23.5008 11.0002H23.4998ZM5.00016 12.5002C5.00016 11.6733 5.67328 11.0002 6.50016 11.0002C6.51703 11.0002 6.53109 10.9913 6.54703 10.9903C7.34109 12.6961 8.53406 14.6705 10.2741 16.1494C10.5619 16.3945 10.815 16.6702 11.0363 16.9702C6.60938 16.6973 5.00016 14.5341 5.00016 12.5002ZM13.5131 25.0003C13.808 24.4594 14.0002 23.8064 14.0002 23.0002V19.92C14.0002 17.8692 13.1142 15.9398 11.5692 14.6259C9.80016 13.1217 8.22234 10.4588 7.34813 7.50375C7.17609 6.92063 7.28812 6.30375 7.65891 5.80969C8.04281 5.29453 8.63109 4.99969 9.27094 4.99969H20.7281C21.368 4.99969 21.9562 5.29453 22.3402 5.80875C22.7091 6.30375 22.822 6.92062 22.6509 7.50281C21.7758 10.4597 20.198 13.1217 18.4298 14.6259C16.8848 15.9389 15.9989 17.8687 15.9989 19.92V23.0002C15.9989 23.8059 16.1897 24.4594 16.4859 25.0003H13.5131ZM12.7913 12.7631C12.5273 12.5812 12.4162 12.2452 12.5212 11.9409L13.0402 10.335L11.6742 9.33516C11.347 9.09516 11.2762 8.63625 11.5162 8.30906C11.6541 8.12109 11.8744 8.00906 12.1073 8.00906H13.7883L14.2992 6.41625C14.4281 6.02906 14.8463 5.82141 15.2334 5.95031C15.4533 6.02344 15.6263 6.19641 15.6994 6.41625L16.2094 8.00906H17.8903C18.2953 8.00906 18.6244 8.33719 18.6244 8.74312C18.6244 8.97797 18.5123 9.19828 18.3234 9.33609L16.9575 10.3359L17.4764 11.9419C17.6006 12.3277 17.3883 12.742 17.0016 12.8667C16.7775 12.9389 16.5323 12.8986 16.3425 12.7598L14.9995 11.7717L13.6556 12.7589C13.3997 12.9497 13.0495 12.9511 12.7917 12.7631H12.7913Z" fill="#2067FB"/>
+                    <defs>
+                      <filter id="filter0_f_103_8" x="1" y="1" width="28" height="28" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                        <feGaussianBlur stdDeviation="1.5" result="effect1_foregroundBlur_103_8"/>
+                      </filter>
+                    </defs>
+                  </svg>
+
                 </div>
                 <div class="l-experience__item-text">
                   27 лет на рынке
@@ -164,11 +193,27 @@
               </div>
               <div class="l-experience__item d-f ai-c">
                 <div class="l-experience__icon">
-                  <embed
-                    width="24"
-                    height="24"
-                    type="image/svg+xml"
-                    src="assets/img/icons/case.svg">
+                  <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_103_5)">
+                      <path d="M21.9995 6.99984H20.8993C20.4212 4.67344 18.3747 3.00281 15.9996 3H13.9995C11.6244 3.00281 9.57784 4.67344 9.09972 6.99984H7.99959C5.24011 7.00313 3.00328 9.24 3 12V21.9998C3.00328 24.7598 5.24011 26.9967 8.00006 27H21.9999C24.7599 26.9967 26.9967 24.7598 27 21.9998V12C26.9967 9.24 24.7599 7.00313 21.9999 6.99984H21.9995ZM13.9995 4.99969H15.9996C17.2661 5.00484 18.3934 5.80547 18.8153 6.99984H11.1833C11.6056 5.80547 12.7325 5.00531 13.999 4.99969H13.9995ZM7.99959 8.99953H21.9995C23.6565 8.99953 24.9994 10.3425 24.9994 11.9995V14.9995H5.00012V11.9995C5.00012 10.3425 6.34306 8.99953 8.00006 8.99953H7.99959ZM21.9995 24.9994H8.00006C6.34306 24.9994 5.00012 23.6564 5.00012 21.9994V16.9992H13.9999V17.9991C13.9999 18.5513 14.4476 18.9989 14.9998 18.9989C15.5519 18.9989 15.9996 18.5513 15.9996 17.9991V16.9992H24.9994V21.9994C24.9994 23.6564 23.6565 24.9994 21.9995 24.9994Z"
+                            fill="#2067FB"/>
+                      <g class="svg-shadow" filter="url(#filter0_f_103_5)">
+                        <path d="M21.9995 6.99984H20.8993C20.4212 4.67344 18.3747 3.00281 15.9996 3H13.9995C11.6244 3.00281 9.57784 4.67344 9.09972 6.99984H7.99959C5.24011 7.00313 3.00328 9.24 3 12V21.9998C3.00328 24.7598 5.24011 26.9967 8.00006 27H21.9999C24.7599 26.9967 26.9967 24.7598 27 21.9998V12C26.9967 9.24 24.7599 7.00313 21.9999 6.99984H21.9995ZM13.9995 4.99969H15.9996C17.2661 5.00484 18.3934 5.80547 18.8153 6.99984H11.1833C11.6056 5.80547 12.7325 5.00531 13.999 4.99969H13.9995ZM7.99959 8.99953H21.9995C23.6565 8.99953 24.9994 10.3425 24.9994 11.9995V14.9995H5.00012V11.9995C5.00012 10.3425 6.34306 8.99953 8.00006 8.99953H7.99959ZM21.9995 24.9994H8.00006C6.34306 24.9994 5.00012 23.6564 5.00012 21.9994V16.9992H13.9999V17.9991C13.9999 18.5513 14.4476 18.9989 14.9998 18.9989C15.5519 18.9989 15.9996 18.5513 15.9996 17.9991V16.9992H24.9994V21.9994C24.9994 23.6564 23.6565 24.9994 21.9995 24.9994Z"
+                              fill="#2067FB"/>
+                      </g>
+                    </g>
+                    <defs>
+                      <filter id="filter0_f_103_5" x="-2" y="-2" width="34" height="34" filterUnits="userSpaceOnUse"
+                              color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                        <feGaussianBlur stdDeviation="1.5" result="effect1_foregroundBlur_103_5"/>
+                      </filter>
+                      <clipPath id="clip0_103_5">
+                        <rect width="30" height="30" fill="white"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
                 </div>
                 <div class="l-experience__item-text">
                   200+ реализованных проектов
@@ -176,11 +221,29 @@
               </div>
               <div class="l-experience__item d-f ai-c">
                 <div class="l-experience__icon">
-                  <embed
-                    width="24"
-                    height="24"
-                    type="image/svg+xml"
-                    src="assets/img/icons/marker.svg">
+<!--                  <embed-->
+<!--                    width="24"-->
+<!--                    height="24"-->
+<!--                    type="image/svg+xml"-->
+<!--                    src="assets/img/icons/marker.svg">-->
+                  <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_104_11)">
+                      <g class="svg-shadow" filter="url(#filter0_f_104_11)">
+                        <path d="M15 14.9806C17.2092 14.9806 18.9998 13.1915 18.9998 10.9852C18.9998 8.77888 17.2087 6.98978 15 6.98978C12.7913 6.98978 11.0002 8.77888 11.0002 10.9852C11.0002 13.1915 12.7913 14.9806 15 14.9806ZM15 8.98724C16.1044 8.98724 17.0002 9.88156 17.0002 10.9852C17.0002 12.0888 16.1048 12.9831 15 12.9831C13.8952 12.9831 12.9998 12.0888 12.9998 10.9852C12.9998 9.88156 13.8952 8.98724 15 8.98724ZM18.9998 24.9993L27 26.9452V16.462C27 15.1412 26.1333 13.9762 24.8672 13.5941L22.7672 12.8951C22.9209 12.2719 22.9988 11.6327 23.0002 10.9913C23.0002 6.57774 19.4184 3 15 3C10.5816 3 6.99984 6.57774 6.99984 10.9913C7.00266 11.3967 7.03641 11.8013 7.09969 12.2021C5.56453 11.5911 3.82453 12.3384 3.21234 13.8713C3.07172 14.2239 3 14.6008 3 14.9806V24.7216L10.9828 27L18.9998 24.9993ZM10.7569 6.75379C13.1166 4.42997 16.9158 4.45713 19.2417 6.81419C21.5414 9.14457 21.5452 12.8866 19.2497 15.2212L14.9995 19.3758L10.7564 15.2297C8.41359 12.889 8.41359 9.09447 10.7564 6.75426L10.7569 6.75379ZM5.00016 14.9806C4.99781 14.6458 5.16563 14.3325 5.44594 14.1495C5.73984 13.957 6.1125 13.9313 6.42984 14.0816L7.86375 14.599C8.24719 15.358 8.74922 16.0509 9.35062 16.6526L14.9995 22.1726L20.6564 16.6456C21.2128 16.0907 21.6844 15.4572 22.0566 14.7657L24.2737 15.5059C24.7027 15.6286 24.9984 16.02 24.9989 16.4658V24.406L18.9998 22.9419L11.0198 24.9398L4.99969 23.2176V14.981L5.00016 14.9806Z" fill="#2067FB"/>
+                      </g>
+                      <path d="M15 14.9806C17.2092 14.9806 18.9998 13.1915 18.9998 10.9852C18.9998 8.77888 17.2087 6.98978 15 6.98978C12.7913 6.98978 11.0002 8.77888 11.0002 10.9852C11.0002 13.1915 12.7913 14.9806 15 14.9806ZM15 8.98724C16.1044 8.98724 17.0002 9.88156 17.0002 10.9852C17.0002 12.0888 16.1048 12.9831 15 12.9831C13.8952 12.9831 12.9998 12.0888 12.9998 10.9852C12.9998 9.88156 13.8952 8.98724 15 8.98724ZM18.9998 24.9993L27 26.9452V16.462C27 15.1412 26.1333 13.9762 24.8672 13.5941L22.7672 12.8951C22.9209 12.2719 22.9988 11.6327 23.0002 10.9913C23.0002 6.57774 19.4184 3 15 3C10.5816 3 6.99984 6.57774 6.99984 10.9913C7.00266 11.3967 7.03641 11.8013 7.09969 12.2021C5.56453 11.5911 3.82453 12.3384 3.21234 13.8713C3.07172 14.2239 3 14.6008 3 14.9806V24.7216L10.9828 27L18.9998 24.9993ZM10.7569 6.75379C13.1166 4.42997 16.9158 4.45713 19.2417 6.81419C21.5414 9.14457 21.5452 12.8866 19.2497 15.2212L14.9995 19.3758L10.7564 15.2297C8.41359 12.889 8.41359 9.09447 10.7564 6.75426L10.7569 6.75379ZM5.00016 14.9806C4.99781 14.6458 5.16563 14.3325 5.44594 14.1495C5.73984 13.957 6.1125 13.9313 6.42984 14.0816L7.86375 14.599C8.24719 15.358 8.74922 16.0509 9.35062 16.6526L14.9995 22.1726L20.6564 16.6456C21.2128 16.0907 21.6844 15.4572 22.0566 14.7657L24.2737 15.5059C24.7027 15.6286 24.9984 16.02 24.9989 16.4658V24.406L18.9998 22.9419L11.0198 24.9398L4.99969 23.2176V14.981L5.00016 14.9806Z" fill="#2067FB"/>
+                    </g>
+                    <defs>
+                      <filter id="filter0_f_104_11" x="-1" y="-1" width="32" height="32" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                        <feGaussianBlur stdDeviation="2" result="effect1_foregroundBlur_104_11"/>
+                      </filter>
+                      <clipPath id="clip0_104_11">
+                        <rect width="30" height="30" fill="white"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
                 </div>
                 <div class="l-experience__item-text">
                   Партнерская сеть по всей России
@@ -195,7 +258,7 @@
           <div class="">
             <div class="l-form__body d-f jc-sb ai-c">
               <div class="l-form__text">
-                <div class="l-form__text_b">Хотите узнать больше?</div>
+                <div class="l-form__text_b txt-hover">Хотите узнать больше?</div>
                 Оставьте заявку, и наш менеджер свяжется с вами
               </div>
               <div>
@@ -222,7 +285,7 @@
       </div>
       <section class=" l-history section">
         <div class="container">
-          <h4 class="section-title">
+          <h4 class="section-title txt-hover">
             Истории успеха
           </h4>
             <div class="l-history__items d-g">
