--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <span class="p-a"></span>
             <span class="p-a"></span>
           </div>
-          <div class="header__logo d-f ai-c  jc-c">
+          <a href="#" class="header__logo d-f ai-c  jc-c">
             <img src="assets/img/logo.svg" alt="logotype">
-          </div>
+          </a>
           <div class="header__actions d-f ai-c ">
             <div class="header__request btn btn-blue">
               Связаться
@@ -55,10 +55,7 @@
             </p>
           </div>
           <div class="l-intro__items d-g">
-            <div
-              class="l-intro__item p-r"
-            >
-<!--              style="background-image: url(assets/img/1.jpg);"-->
+            <div class="l-intro__item stroke-item p-r" >
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
                   <div class="l-intro__name">
@@ -73,7 +70,7 @@
                   <a href="#" class="btn">Перейти на сайт</a>
                 </div>
               </div>
-              <div class="l-intro__h p-a">
+              <div class="stroke-item-hover p-a">
                 <svg>
                   <rect x="0" y="0"
                         width="100" height="100"
@@ -84,10 +81,7 @@
                 <img src="assets/img/1.jpg" alt="alt">
               </div>
             </div>
-            <div
-              class="l-intro__item p-r"
-            >
-<!--              style="background-image: url(assets/img/2.jpg);"-->
+            <div class="l-intro__item stroke-item p-r"  >
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
                   <div class="l-intro__name">
@@ -101,7 +95,7 @@
                   <a href="#" class="btn">Перейти на сайт</a>
                 </div>
               </div>
-              <div class="l-intro__h p-a">
+              <div class="stroke-item-hover p-a">
                 <svg>
                   <rect x="0" y="0"
                         width="100" height="100"
@@ -112,10 +106,7 @@
                 <img src="assets/img/2.jpg" alt="alt">
               </div>
             </div>
-            <div
-              class="l-intro__item p-r"
-            >
-<!--              style="background-image: url(assets/img/3.jpg);"-->
+            <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div>
                   <div class="l-intro__name">
@@ -129,7 +120,7 @@
                   <a href="#" class="btn">Перейти на сайт</a>
                 </div>
               </div>
-              <div class="l-intro__h p-a">
+              <div class="stroke-item-hover p-a">
                 <svg>
                   <rect x="0" y="0"
                         width="100" height="100"
@@ -291,7 +282,7 @@
             Истории успеха
           </h4>
             <div class="l-history__items d-g">
-              <div class="l-history__item d-f fd-c">
+              <div class="l-history__item stroke-item d-f fd-c p-r">
                 <div class="l-history__picture d-f ai-c">
                   <img src="assets/img/history/g.png" alt="alt">
                 </div>
@@ -303,8 +294,15 @@
                     <a href="#" class="btn">Читать кейс</a>
                   </div>
                 </div>
+                <div class="stroke-item-hover p-a">
+                  <svg>
+                    <rect x="0" y="0"
+                          width="100" height="100"
+                          rx="15" ry="15"/>
+                  </svg>
+                </div>
               </div>
-              <div class="l-history__item d-f fd-c">
+              <div class="l-history__item stroke-item d-f fd-c p-r">
                 <div class="l-history__picture d-f ai-c">
                   <img src="assets/img/history/l.png" alt="alt">
                 </div>
@@ -316,8 +314,15 @@
                     <a href="#" class="btn">Читать кейс</a>
                   </div>
                 </div>
+                <div class="stroke-item-hover p-a">
+                  <svg>
+                    <rect x="0" y="0"
+                          width="100" height="100"
+                          rx="15" ry="15"/>
+                  </svg>
+                </div>
               </div>
-              <div class="l-history__item d-f fd-c">
+              <div class="l-history__item stroke-item d-f fd-c p-r">
                 <div class="l-history__picture d-f ai-c">
                   <img src="assets/img/history/p.png" alt="alt">
                 </div>
@@ -328,6 +333,13 @@
                   <div class="l-history__btn d-f jc-c">
                     <a href="#" class="btn">Читать кейс</a>
                   </div>
+                </div>
+                <div class="stroke-item-hover p-a">
+                  <svg>
+                    <rect x="0" y="0"
+                          width="100" height="100"
+                          rx="15" ry="15"/>
+                  </svg>
                 </div>
               </div>
             </div>
