recrement opacity for vieo

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 </head>
 <body>
 <div class="wrapper">
-  <div
-    class="content"
-  >
-<!--    style="background-image: url(assets/img/bg.png);"-->
+  <div class="content" >
     <div class="content__video">
       <video src="assets/video/intro.mp4" muted autoplay loop playsinline></video>
+<!--      <div class="content__video-filter"></div>-->
     </div>
     <header class="header">
       <div class="container">
