add gradient for video

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <div class="wrapper">
   <div class="content" >
     <div class="content__video">
-      <video src="assets/video/intro.mp4" muted autoplay loop playsinline></video>
+      <video class="p-r" src="assets/video/intro.mp4" muted autoplay loop playsinline></video>
+      <div class="content__bg p-a"></div>
 <!--      <div class="content__video-filter"></div>-->
     </div>
     <header class="header">
