fix hover broke

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 </head>
 <body>
 <div class="wrapper">
-  <div class="content" >
+  <div class="content p-r" >
     <div class="content__video">
       <video class="p-r" src="assets/video/intro.mp4" muted autoplay loop playsinline></video>
-      <div class="content__bg p-a"></div>
-<!--      <div class="content__video-filter"></div>-->
     </div>
+    <div class="content__bg p-a"></div>
     <header class="header">
       <div class="container">
         <div class="header__row d-g">
