--- a/index.html
+++ b/index.html
@@ -395,7 +395,39 @@
       </div>
     </div>
   </footer>
+  <div class="modal d-f ai-c jc-c">
+    <div class="modal__body">
+      <div class="modal__close">
+        <span></span>
+        <span></span>
+      </div>
+      <div class="modal__title">Связаться с нами</div>
+      <form action="#">
+        <div class="modal__input">
+          <label >
+            <input
+              type="text"
+              placeholder="Ваш E-mail"
+            >
+          </label>
+        </div>
+        <div class="modal__input">
+          <label >
+            <input
+              type="text"
+              class="k1-phone-input"
+              placeholder="Телефон"
+            >
+          </label>
+        </div>
+        <div class="modal__btn">
+          <button class="btn">Отправить</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
+<script src="https://cdn.jsdelivr.net/gh/koles1ko/mask@1.0.3/dist/PhoneMask.js"></script>
 <script src="assets/scripts/script.js"></script>
 </body>
 </html>
