--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="header__request btn btn-blue">
               Связаться
             </div>
-            <div class="header__lang txt-hover">EN</div>
+            <a href="index-en.html" class="header__lang txt-hover">EN</a>
           </div>
         </div>
       </div>
@@ -397,7 +397,7 @@
       </div>
     </div>
   </footer>
-  <div class="modal d-f ai-c jc-c">
+  <div class="modal modal-request d-f ai-c jc-c">
     <div class="modal__body">
       <div class="modal__close">
         <span></span>
@@ -430,6 +430,7 @@
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/koles1ko/mask@1.0.3/dist/PhoneMask.js"></script>
+<script src="assets/scripts/LandingModal.js"></script>
 <script src="assets/scripts/script.js"></script>
 </body>
 </html>
