change svg to png

--- a/index-en.html
+++ b/index-en.html
@@ -74,7 +74,7 @@
             <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div class="l-intro__picture">
-                  <img src="assets/img/en/1.svg" alt="picture">
+                  <img src="assets/img/en/1.png" alt="picture">
                 </div>
                 <div class="d-f fd-c jc-sb l-intro__info">
                   <div>
@@ -94,7 +94,7 @@
             <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c">
                 <div class="l-intro__picture">
-                  <img src="assets/img/en/2.svg" alt="picture">
+                  <img src="assets/img/en/2.png" alt="picture">
                 </div>
                 <div class="d-f fd-c jc-sb l-intro__info">
                   <div>
@@ -114,7 +114,7 @@
             <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div class="l-intro__picture">
-                  <img src="assets/img/en/3.svg" alt="picture">
+                  <img src="assets/img/en/3.png" alt="picture">
                 </div>
                 <div class="d-f fd-c jc-sb l-intro__info">
                   <div>
@@ -333,7 +333,7 @@
         <span></span>
       </div>
       <div class="modal__picture">
-        <img src="assets/img/en/1.svg" alt="">
+        <img src="assets/img/en/1.png" alt="">
       </div>
       <div class="modal__content">
         <div class="modal__title">
@@ -367,7 +367,7 @@
         <span></span>
       </div>
       <div class="modal__picture">
-        <img src="assets/img/en/2.svg" alt="">
+        <img src="assets/img/en/2.png" alt="">
       </div>
       <div class="modal__content">
       <div class="modal__title">
@@ -401,7 +401,7 @@
         <span></span>
       </div>
       <div class="modal__picture">
-        <img src="assets/img/en/3.svg" alt="">
+        <img src="assets/img/en/3.png" alt="">
       </div>
       <div class="modal__content">
       <div class="modal__title">
