--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div class="l-intro__picture">
-                  <img src="assets/img/en/1.svg" alt="picture">
+                  <img src="assets/img/en/1.png" alt="picture">
                 </div>
                 <div class="d-f fd-c jc-sb l-intro__info">
                   <div>
@@ -77,7 +77,7 @@
             <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div class="l-intro__picture">
-                  <img src="assets/img/en/2.svg" alt="picture">
+                  <img src="assets/img/en/2.png" alt="picture">
                 </div>
                 <div class="d-f fd-c jc-sb l-intro__info">
                   <div>
@@ -97,7 +97,7 @@
             <div class="l-intro__item stroke-item p-r">
               <div class="l-intro__item-content d-f fd-c jc-sb">
                 <div class="l-intro__picture">
-                  <img src="assets/img/en/3.svg" alt="picture">
+                  <img src="assets/img/en/3.png" alt="picture">
                 </div>
                 <div class="d-f fd-c jc-sb l-intro__info">
                   <div>
