--- a/index-en.html
+++ b/index-en.html
@@ -28,13 +28,13 @@
     <div class="content__bg p-a"></div>
     <header class="header">
       <div class="container">
-        <div class="header__row d-g">
-          <div class="header__menu p-r ">
+        <div class="header__row d-f jc-sb ai-c">
+          <!--<div class="header__menu p-r ">
             <span class="p-a"></span>
             <span class="p-a"></span>
             <span class="p-a"></span>
-          </div>
-          <a href="#" class="header__logo d-f ai-c  jc-c">
+          </div>-->
+          <a href="#" class="header__logo header__logo_en d-f ai-c  jc-c">
             <img src="assets/img/logo.svg" alt="logotype">
           </a>
           <div class="header__actions d-f ai-c ">
