add media css for window height

--- a/index-en.html
+++ b/index-en.html
@@ -324,7 +324,7 @@
       </form>
     </div>
   </div>
-  <div class="modal modal-automation modal-card d-f ai-c jc-c">
+  <div class="modal opened modal-automation modal-card d-f ai-c jc-c">
     <div
       class="modal__body p-r"
     >
