remove phone mask from en version

--- a/index-en.html
+++ b/index-en.html
@@ -293,7 +293,7 @@
       </div>
     </div>
   </footer>
-  <div class="modal modal-request d-f ai-c jc-c">
+  <div class="modal en-ver modal-request d-f ai-c jc-c">
     <div class="modal__body">
       <div class="modal__close">
         <span></span>
